# CloudRoboticsInfrastructure

./: README.md
src/beginner_tutorials/: package.xml
src/beginner_tutorials/scripts/: audio_listener.py  bag_Database.py  bag_analyser.py  bump_listener.py  complete_listener.py  dataSharerReceiver.py  listener.py  mongoLABhelper.py  mongohelper.py  motion_detect.py  sharedMotionData.py  sonar_listener.py  talker.py  witTestApplication.py
src/navigation_tutorial/src/exercise1/scripts/: joystick_to_cmd_vel.py
src/navigation_tutorial/src/exercise2/: CMakeLists.txt
